force-app/main/default/objects/copado__External_CI_Setting__c/copado__External_CI_Setting__c.object-meta.xml
<CustomObject>
    <label>External CI Setting</label>
    <nameField>
        <label>External CI Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External CI Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>