force-app/main/default/objects/copado__External_CI_Setting__c/fields/copado__API_Token__c.field-meta.xml
<CustomField>
    <fullName>copado__API_Token__c</fullName>
    <label>API Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>