force-app/main/default/objects/copado__External_CI_Setting__c/fields/copado__CI_Tool__c.field-meta.xml
<CustomField>
    <fullName>copado__CI_Tool__c</fullName>
    <label>CI Tool</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jenkins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>