force-app/main/default/objects/copado__External_CI_Setting__c/fields/copado__Password__c.field-meta.xml
<CustomField>
    <fullName>copado__Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>